auto_branch_pushes/yansfil/update-event-schema/ppluto-main/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60 # Sticky session for rolling release stability.
    alb.ingress.kubernetes.io/group.name: ppluto-main # the same group belongs to the same ALB (https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#group.name)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # http 80 port redirects to https 443
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:912892869657:certificate/7cad03f5-41d0-41a7-9a3a-f77e58b77de0,arn:aws:acm:ap-northeast-2:912892869657:certificate/9c24bb1c-9247-4291-9a87-d181f49f9034,arn:aws:acm:ap-northeast-2:912892869657:certificate/5b2afc86-2c8e-4a7c-ba38-29281a1f04eb,arn:aws:acm:ap-northeast-2:912892869657:certificate/b4477296-a40a-43a0-89c6-5b42dd09c962,arn:aws:acm:ap-northeast-2:912892869657:certificate/64171bbd-a8af-42f4-b7cf-add40d948b31,arn:aws: [...]
    alb.ingress.kubernetes.io/subnets: subnet-0e702042fef1214b0,subnet-0e2d06adbcc8e5ea0,subnet-0b5971ee8ec80ecd7 # same vpc subnetes in the k8s cluster
    alb.ingress.kubernetes.io/idle-timeout: "300" # idle timeout for ALB (TODO: reset to 60 and handle the long latency connection in the other way)
spec:
  rules:
    # tickerbell.com
    - host: HOST_NAME_PLACEHOLDER_0
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 83
          # prerender.io service
          - path: /http
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-prerender-service
                port:
                  number: 5088
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 80

    # openembedding.com (Project Gaia)
    - host: HOST_NAME_PLACEHOLDER_2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 8003
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82

    # www.projectpluto.co (Company website)
    - host: HOST_NAME_PLACEHOLDER_3
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 8004
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82
